# timm-info

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  timminfo.py
src/timm_info/: __init__.py
tests/: test_info.py  test_search.py  utils.py
