[project]
name = "timm-info"
version = "0.2.0"
description = "A timm model utility"
readme = "README.md"
authors = [
    { name = "Ben Elfner", email = "belfner@belfner.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Utilities",
]
dependencies = [
    "click>=0.2",
    "timm>=0.9.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/belfner/timm-info"

[project.scripts]
timminfo = "timm_info:cli"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "twine>=6.2.0",
]

[tool.pycodestyle]
max-line-length = 120
