[metadata]
name = timm-info
version = 0.0.5
description = A timm model utility
author = Benjamin Elfner
url = https://github.com/belfner/timm-info
license = MIT
license_file = LICENSE
classifiers =
	License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Topic :: Utilities

[options]
py_modules = timminfo
install_requires = file: requirements.txt
python_requires = >=3.8
zip_safe = no

[options.extras_require]
dev = file: requirements_dev.txt


[pycodestyle]
max-line-length = 120

[options.entry_points]
console_scripts =
    timminfo = timminfo:cli
